--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100&display=swap');
-@font-face {
-    font-family: "Oswald" ;
-    src: url("/CSS/fonts/static/Oswald-Bold.ttf");
-    font-weight:500;
-}
 html {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
     color:blueviolet;
 }
 h1 {
@@ -14,15 +8,22 @@ h1 {
     text-align:center;
     text-transform:none;
 }
-p {
-    font-family: 'MuseoModerno', cursive;
+.content {
     font-size:24px;
-    text-transform: capitalize;
     line-height: normal;
-    font-weight: 600;
     color:rgb(83, 109, 31);
 }
 img {
     width:350px;
     margin-top:10px;
+}
+#bio-header  {
+    color: crimson;
+    font-family: 'Times New Roman', Times, serif;
+}
+#skills-header {
+    color:darkblue;
+}
+.bold {
+    font-weight: bold;
 }
